Closed Bug 1886731 Opened 2 years ago Closed 2 years ago

FF 124 broke color-scheme css with high-contrast win themes

Categories

(Core :: CSS Parsing and Computation, defect)

Firefox 124
defect

Tracking

()

VERIFIED FIXED
126 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox124 --- wontfix
firefox125 --- wontfix
firefox126 --- verified

People

(Reporter: owyntyler, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Attached video 124 broken.mp4

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:124.0) Gecko/20100101 Firefox/124.0

Steps to reproduce:

I upgraded my FF 123 to FF 124 and noticed that all my window-scrollbars are now white and color-scheme: dark css no longer affects them (I use a userscript to apply it to all website's :root elements)

I checked https://developer.mozilla.org/en-US/docs/Web/CSS/color-scheme page and clicked the example window - example was also not changing anything now

I downloaded a portable version of previous FF 123 and checked it there with the same browser color settings - it was working perfectly there

System info:
Win 10 with high contrast mode turned on ( I need this to recolor old apps and parts of apps which are usually pure white no matter what ) and dark mode and dark mode for apps on

Actual results:

color-scheme css no longer has any effect in FF 124

Expected results:

color-scheme css should recolor page elements like it was in FF 123

Attached video 123.0.1 working.mp4

The Bugbug bot thinks this bug should belong to the 'Core::Layout' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Layout
Product: Firefox → Core

Mozregression on Win 10 + HCM + "Override the colors specified by the page with your selections above:" Never, it points to bug 1879386.

Severity: -- → S3
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Regressed by: 1879386

I'm confused, this seems to be working as intended. The windows HCM theme doesn't have dark colors. Before that patch we were using some default ones, but that doesn't really make sense, and causes contrast issues like the one you show in comment 1 (where you have dark text on dark background).

(In reply to Emilio Cobos Álvarez (:emilio) from comment #4)

I'm confused, this seems to be working as intended. The windows HCM theme doesn't have dark colors. Before that patch we were using some default ones, but that doesn't really make sense, and causes contrast issues like the one you show in comment 1 (where you have dark text on dark background).

I have reported those contrast issues caused by using default system colors in here: https://bugzilla.mozilla.org/show_bug.cgi?id=1688429

The windows HCM theme doesn't have dark colors.

There isn't just one HCM theme, user can make any theme with any colors and enable the HCM flag to make it contrast

This issue is just about color-scheme css not having any effect at all anymore after upgrading FF 123 to FF 124

Set release status flags based on info from the regressing bug 1879386

This issue is just about color-scheme css not having any effect at all anymore after upgrading FF 123 to FF 124

That is the expected effect of making Firefox override the page's color. The fact that it had an effect before was a bug, it's been always intended to be ignored when document colors are disabled, see this...

Oh, but looking further, you're setting Never in the "override the pages' colors". So ok, that is a bug.

Flags: needinfo?(emilio)
Flags: needinfo?(emilio)
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/084344775005 Only force light system colors on windows when overriding document colors. r=morgan
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox125 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)
Flags: needinfo?(emilio)
Component: Layout → CSS Parsing and Computation
Regressions: 1890964

I've replicated this issue using Firefox 124.0 on Windows 10 x64 following the STR from Comment 0.
Verified as fixed in the latest Firefox 126.0 version on Windows 10 x64, as the issue no longer occurs.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: