Bug 1886731 - Only force light system colors on windows when overriding document colors. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D205349