layout/style/PreferenceSheet.cpp
@@ -205,7 +205,7 @@ void PreferenceSheet::Prefs::Load(bool aIsChrome) {
   // as those are the colors exposed to the user in the colors dialog.
   mMustUseLightColorSet = mUsePrefColors && !mUseDocumentColors;
 #ifdef XP_WIN
-  if (mUseAccessibilityTheme) {
+  if (mUseAccessibilityTheme && !mUseDocumentColors) {
     // Windows overrides the light colors with the HCM colors when HCM is
     // active, so make sure to always use the light system colors in that case,
     // and also make sure that we always use the light color set for the same
